// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SteppedLine renderHorizontal should work well 1`] = `
<SteppedLine
  className=""
  orientation="horizonal"
  style={Object {}}
  x0={1}
  x1={0}
  y0={1}
  y1={0}
>
  <div
    className="stepped-line"
  >
    <Line
      className=""
      orientation="horizonal"
      style={Object {}}
      x0={1}
      x1={0.5}
      y0={1}
      y1={1}
    >
      <div
        className="line-core"
        style={
          Object {
            "left": "1px",
            "top": "1px",
            "transform": "rotate(180deg)",
            "width": "0.5px",
          }
        }
      />
    </Line>
    <Line
      className=""
      orientation="horizonal"
      style={Object {}}
      x0={0}
      x1={0.5}
      y0={0}
      y1={0}
    >
      <div
        className="line-core"
        style={
          Object {
            "left": "0px",
            "top": "0px",
            "transform": "rotate(0deg)",
            "width": "0.5px",
          }
        }
      />
    </Line>
    <Line
      className=""
      orientation="horizonal"
      style={Object {}}
      x0={0.5}
      x1={0.5}
      y0={-1}
      y1={1}
    >
      <div
        className="line-core"
        style={
          Object {
            "left": "0.5px",
            "top": "-1px",
            "transform": "rotate(90deg)",
            "width": "2px",
          }
        }
      />
    </Line>
  </div>
</SteppedLine>
`;

exports[`SteppedLine renderVertical should work well 1`] = `
<SteppedLine
  className=""
  orientation="vertical"
  style={Object {}}
  x0={1}
  x1={0}
  y0={1}
  y1={0}
>
  <div
    className="stepped-lineto"
  >
    <Line
      className=""
      orientation="vertical"
      style={Object {}}
      x0={1}
      x1={1}
      y0={1}
      y1={0.5}
    >
      <div
        className="line-core"
        style={
          Object {
            "left": "1px",
            "top": "1px",
            "transform": "rotate(-90deg)",
            "width": "0.5px",
          }
        }
      />
    </Line>
    <Line
      className=""
      orientation="vertical"
      style={Object {}}
      x0={0}
      x1={0}
      y0={0}
      y1={0.5}
    >
      <div
        className="line-core"
        style={
          Object {
            "left": "0px",
            "top": "0px",
            "transform": "rotate(90deg)",
            "width": "0.5px",
          }
        }
      />
    </Line>
    <Line
      className=""
      orientation="vertical"
      style={Object {}}
      x0={0}
      x1={1}
      y0={0.5}
      y1={0.5}
    >
      <div
        className="line-core"
        style={
          Object {
            "left": "0px",
            "top": "0.5px",
            "transform": "rotate(0deg)",
            "width": "1px",
          }
        }
      />
    </Line>
  </div>
</SteppedLine>
`;
